Create demo feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ hyperledger.msp.client=CientMSP
 hyperledger.msp.quan12=Quan12MSP
 hyperledger.port.client=7054
 hyperledger.port.quan12=9054
+
+code.quan12=quan12
